use HTTP for now. slight tweaks to test html

--- a/bt/dashboard.html
+++ b/bt/dashboard.html
@@ -183,7 +183,7 @@ on_stats = function(updates)
 };
 
 window.onload = function() {
-	var url = 'wss://' + window.location.host + '/bt/control';
+	var url = 'ws://' + window.location.host + '/bt/control';
 	conn = new libtorrent_connection(url, function(state)
 	{
 		if (state != "OK") {
