--- a/bt/test_settings.html
+++ b/bt/test_settings.html
@@ -92,7 +92,7 @@ function submit(settings_id)
 }
 
 window.onload = function() {
-	var url = 'ws://' + window.location.host + '/bt/control';
+	var url = 'wss://' + window.location.host + '/bt/control';
 	conn = new libtorrent_connection(url, function(state)
 	{
 		if (state != "OK") {
