--- a/bt/test.html
+++ b/bt/test.html
@@ -112,7 +112,7 @@ redraw = function(updates)
 };
 
 window.onload = function() {
-	var url = 'ws://' + window.location.host + '/bt/control';
+	var url = 'wss://' + window.location.host + '/bt/control';
 	conn = new libtorrent_connection(url, function(state)
 	{
 		if (state != "OK") {
